delete usefull API design and implementation
