# doc/api.yaml
@@ -697,63 +697,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Response"
-
-  /users/{username}/profile/posts/{post_id}/likes/:
-    parameters:
-      - name: username
-        description: The user's username
-        in: path
-        required: true
-        schema:
-          $ref: "#/components/schemas/Username"
-      - name: post_id
-        description: The UUID of the post
-        in: path
-        required: true
-        schema:
-          $ref: "#/components/schemas/UniversallyUniqueIdentifiers"
-    
-    get:
-      tags: ["posts"]
-      operationId: getLikes
-      summary: Get the users who liked the post
-      description: | 
-        Get the users who liked the post
-      security:
-        - bearerAuth: []
-      responses:
-        "200":
-          description: |
-            Succesfully get the users that
-              liked the post
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/UserList"
-        "400":
-          description: Bad request
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Response"
-        "401":
-          description: Unauthorized
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Response"
-        "404":
-          description: Not found
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Response"
-        "500":
-          description: Internal server error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Response"
   
   /users/{username}/profile/posts/{post_id}/likes/{liker_id}:
     parameters:
@@ -1013,104 +956,6 @@ paths:
               schema:
                 $ref: "#/components/schemas/Response"
   
-  /users/{username}/followers:
-    parameters:
-      - name: username
-        in: path
-        description: The user's name
-        required: true
-        schema:
-          $ref: "#/components/schemas/Username"
-    get:
-      tags: ["followers"]
-      operationId: getFollowers
-      summary: Get a list with the followers
-      description: | 
-        If authorized get a list of the 
-          followers of the username's user
-      security:
-        - bearerAuth: []
-      responses:
-        "200":
-          description: Succesfully get the followers list
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/UserList"
-        "400":
-          description: Bad request
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Response"
-        "401":
-          description: Unauthorized
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Response"
-        "404":
-          description: Not found
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Response"
-        "500":
-          description: Internal server error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Response"
-  
-  /users/{username}/following/:
-    parameters:
-      - name: username
-        in: path
-        description: The user's name
-        required: true
-        schema:
-          $ref: "#/components/schemas/Username"
-    get:
-      tags: ["followers"]
-      operationId: getFollowing
-      summary: Get a list with the following
-      description: | 
-        If authorized get a list of the 
-          following of the username's user
-      security:
-        - bearerAuth: []
-      responses:
-        "200":
-          description: Succesfully get the following list
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/UserList"
-        "400":
-          description: Bad request
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Response"
-        "401":
-          description: Unauthorized
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Response"
-        "404":
-          description: Not found
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Response"
-        "500":
-          description: Internal server error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Response"
-  
   /users/{username}/following/{followed_username}:
     parameters:
       - name: username
@@ -1173,55 +1018,6 @@ paths:
       responses:
         "204":
           description: The user has been unfollowed
-        "400":
-          description: Bad request
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Response"
-        "401":
-          description: Unauthorized
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Response"
-        "404":
-          description: Not found
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Response"
-        "500":
-          description: Internal server error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Response"
-
-  /users/{username}/bans/:
-    parameters:
-      - name: username
-        in: path
-        description: The user's name
-        required: true
-        schema:
-          $ref: "#/components/schemas/Username"
-    get:
-      tags: ["bans"]
-      operationId: getBans
-      summary: Get a list with the banned users
-      description: | 
-        If authorized get a list of the 
-          banned users from the username's user
-      security:
-        - bearerAuth: []
-      responses:
-        "200":
-          description: Succesfully get the bans list
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/UserList"
         "400":
           description: Bad request
           content:
