# service/api/api-handler.go
@@ -23,7 +23,6 @@ func (rt *_router) Handler() http.Handler {
 	rt.router.GET("/users/:username/stream", rt.wrap(rt.getMyStream))
 
 	// Bans routes
-	rt.router.GET("/users/:username/bans/", rt.wrap(rt.getBans))
 	rt.router.PUT("/users/:username/bans/:banned_username", rt.wrap(rt.banUser))
 	rt.router.DELETE("/users/:username/bans/:banned_username", rt.wrap(rt.unbanUser))
 
@@ -32,7 +31,6 @@ func (rt *_router) Handler() http.Handler {
 	rt.router.POST("/users/:username/profile/posts/", rt.wrap(rt.uploadPhoto))
 	rt.router.GET("/users/:username/profile/posts/:post_id/", rt.wrap(rt.getPost))
 	rt.router.DELETE("/users/:username/profile/posts/:post_id/", rt.wrap(rt.deletePhoto))
-	rt.router.GET("/users/:username/profile/posts/:post_id/likes/", rt.wrap(rt.getLikes))
 	rt.router.PUT("/users/:username/profile/posts/:post_id/likes/:liker_id", rt.wrap(rt.likePhoto))
 	rt.router.DELETE("/users/:username/profile/posts/:post_id/likes/:liker_id", rt.wrap(rt.unlikePhoto))
 	rt.router.GET("/users/:username/profile/posts/:post_id/comments/", rt.wrap(rt.getComments))
@@ -40,8 +38,6 @@ func (rt *_router) Handler() http.Handler {
 	rt.router.DELETE("/users/:username/profile/posts/:post_id/comments/:comment_id", rt.wrap(rt.uncommentPhoto))
 
 	// Followers routes
-	rt.router.GET("/users/:username/followers", rt.wrap(rt.getFollowers))
-	rt.router.GET("/users/:username/following/", rt.wrap(rt.getFollowing))
 	rt.router.PUT("/users/:username/following/:followed_username", rt.wrap(rt.followUser))
 	rt.router.DELETE("/users/:username/following/:followed_username", rt.wrap(rt.unfollowUser))
 
